--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@actions/artifact": "^2.3.2",
     "@actions/core": "^1.11.1"
   },
   "devDependencies": {
