--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,9 @@ jobs:
   test-action:
     name: GitHub Actions Test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        color: ["Red", "Blue", "Green"]
 
     steps:
       - name: Checkout
