Add job-name as Input

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        color: ["Red", "Blue", "Green"]
+        color: ['Red', 'Blue', 'Green']
 
     steps:
       - name: Checkout
