--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,8 @@ inputs:
     description: Your input description here
     required: true
     default: '1000'
+  job-name:
+    default: ${{ github.job }}
 
 # Define your outputs here.
 outputs:
