--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,8 @@ inputs:
     default: '1000'
   job-name:
     default: ${{ github.job }}
+  matrix-key:
+    required: false
 
 # Define your outputs here.
 outputs:
