--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   "license": "MIT",
   "dependencies": {
     "@actions/artifact": "^2.3.2",
-    "@actions/core": "^1.11.1"
+    "@actions/core": "^1.11.1",
+    "yaml": "^2.8.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
